tests/define-units-relationship/fail_1_is_bad_literal_div_1.stderr
error: no rules expected `2`
  --> tests/define-units-relationship/fail_1_is_bad_literal_div_1.rs:28:66
   |
28 | measures::define_units_relationship! { true false false, U1 1 == 2 / U2 1 }
   |                                                                  ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$unit2:ident`
  --> src/define_units_relationship.rs
   |
   |     { $exact:tt $with_approx:tt $with_correlation:tt, $unit1:ident 1 == $unit2:ident 1 * __ 1 } => {
   |                                                                         ^^^^^^^^^^^^
